# OptionsAnalytics

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb
scripts/: fetch_demo.py  reproduce_results.py  verify_surface.py  vol_baselines.py
tests/: test_data.py  test_forecast.py  test_implied_vol.py  test_implied_vs_forecast.py  test_montecarlo.py  test_pricing.py  test_vol.py
volforecast/: __init__.py
volforecast/data/: loader.py
volforecast/forecast/: __main__.py  features.py  implied_vs_forecast.py  metrics.py  models.py  validation.py
volforecast/montecarlo/: exotic.py  gbm.py  variance_reduction.py
volforecast/pricing/: black_scholes.py  greeks.py  implied_vol.py
volforecast/surface/: build_surface.py  plot.py
volforecast/vol/: estimators.py  garch.py  realized_vol.py
