[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volforecast"
version = "0.1.0"
description = "Options pricing, Greeks, Monte Carlo, implied-vol, and ML realized-vol forecasting"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "yfinance",
    "arch",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.black]
line-length = 88
